[gd_scene format=3 uid="uid://slval1swbd1e"]

[ext_resource type="Script" uid="uid://b2588cyy5uwee" path="res://src/common/audio_manager.gd" id="1_jisk1"]
[ext_resource type="PackedScene" uid="uid://joqkcgk7mnr4" path="res://scenes/sfx.tscn" id="2_d0ikh"]
[ext_resource type="AudioStream" uid="uid://b0qc2mlrs0rqy" path="res://assets/music/stage_without_mask.mp3" id="2_jp375"]
[ext_resource type="AudioStream" uid="uid://b0ebbrxfiqpyk" path="res://assets/sfx/pearl.wav" id="3_7jmnn"]
[ext_resource type="AudioStream" uid="uid://7igbl5wy7g1p" path="res://assets/sfx/iris_in.wav" id="3_dhfah"]
[ext_resource type="AudioStream" uid="uid://daqgbxinhjd38" path="res://assets/sfx/jump1.wav" id="3_kdspj"]
[ext_resource type="AudioStream" uid="uid://ct264magcjf30" path="res://assets/sfx/mask_on.wav" id="3_t7v5i"]
[ext_resource type="AudioStream" uid="uid://bkgubkelj8w5i" path="res://assets/sfx/jump2.wav" id="4_226ow"]
[ext_resource type="AudioStream" uid="uid://doyafqj610sm8" path="res://assets/sfx/mask_off.wav" id="4_abra4"]
[ext_resource type="AudioStream" uid="uid://b358bso2xpoof" path="res://assets/sfx/iris_out.wav" id="4_rs4ei"]
[ext_resource type="AudioStream" uid="uid://b7f8g4ajprgmi" path="res://assets/sfx/fear.wav" id="4_su454"]
[ext_resource type="AudioStream" uid="uid://np41jnvc0h1l" path="res://assets/sfx/jump3.wav" id="5_7jmnn"]
[ext_resource type="AudioStream" uid="uid://tpsff2kxi6r0" path="res://assets/sfx/death.wav" id="8_rs4ei"]
[ext_resource type="AudioStream" uid="uid://bx010c7okjy80" path="res://assets/music/stage_with_mask.mp3" id="11_abra4"]
[ext_resource type="AudioStream" uid="uid://sn3ysknm6bde" path="res://assets/music/title.mp3" id="13_8st14"]
[ext_resource type="AudioStream" uid="uid://cu853vvxqhtt5" path="res://assets/music/mask_fanfare.mp3" id="16_oucy0"]
[ext_resource type="AudioStream" uid="uid://cpden31pdr8yv" path="res://assets/music/intro.mp3" id="17_cuol6"]
[ext_resource type="AudioStream" uid="uid://by4eg6xbyrq47" path="res://assets/music/sad.mp3" id="18_oummu"]
[ext_resource type="AudioStream" uid="uid://cu1buyp4c23lh" path="res://assets/music/happy.mp3" id="19_hssp1"]

[node name="AudioManager" type="Node" unique_id=2112950315]
process_mode = 3
script = ExtResource("1_jisk1")
sfx_scene = ExtResource("2_d0ikh")
iris_in = ExtResource("3_dhfah")
iris_out = ExtResource("4_rs4ei")
mask_on = ExtResource("3_t7v5i")
mask_off = ExtResource("4_abra4")
pearl_sfx = ExtResource("3_7jmnn")
death_sfx = ExtResource("8_rs4ei")
fear_sfx = ExtResource("4_su454")
jump1_sfx = ExtResource("3_kdspj")
jump2_sfx = ExtResource("4_226ow")
jump3_sfx = ExtResource("5_7jmnn")

[node name="PlayingSounds" type="Node" parent="." unique_id=598008608]

[node name="Title" type="AudioStreamPlayer" parent="." unique_id=478714628]
stream = ExtResource("13_8st14")
parameters/looping = true

[node name="StageWithMask" type="AudioStreamPlayer" parent="." unique_id=692009840]
stream = ExtResource("11_abra4")
parameters/looping = true

[node name="StageWithoutMask" type="AudioStreamPlayer" parent="." unique_id=143143354]
stream = ExtResource("2_jp375")
parameters/looping = true

[node name="GetMask" type="AudioStreamPlayer" parent="." unique_id=1568657887]
stream = ExtResource("16_oucy0")

[node name="Intro" type="AudioStreamPlayer" parent="." unique_id=1146856063]
stream = ExtResource("17_cuol6")

[node name="Sad" type="AudioStreamPlayer" parent="." unique_id=1610005801]
stream = ExtResource("18_oummu")

[node name="Happy" type="AudioStreamPlayer" parent="." unique_id=1713816620]
stream = ExtResource("19_hssp1")
